Loop engineering part 2: electric boogaloo
